fix order_details.java and inventory.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#Configuracion de base de datos POSTGRESQL
+spring.datasource.url=jdbc:postgresql://18.231.175.79:5432/srmaca-ecommerce
+spring.datasource.username=postgres
+spring.datasource.password=AdminPS777.*
 
+#Configuracion de Driver de la base de datos POSTGRESQL
+spring.datasource.driver-class-name=org.postgresql.Driver
