changes hibernate fix connect bd-aws

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 #Configuracion de base de datos POSTGRESQL
-spring.datasource.url=jdbc:postgresql://18.231.175.79:5432/srmaca-ecommerce
+spring.datasource.url=jdbc:postgresql://18.228.204.1:5432/srmaca-ecommerce
 spring.datasource.username=postgres
 spring.datasource.password=AdminPS777.*
 
 #Configuracion de Driver de la base de datos POSTGRESQL
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+#Configuracion de actualizacion de datos en base de datos
+spring.jpa.hibernate.ddl-auto=update
+
+#Configuracion de consultas SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
