--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=AdminPS777.*
 
 #Configuracion de Driver de la base de datos POSTGRESQL
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 
 #Configuracion de actualizacion de datos en base de datos
 spring.jpa.hibernate.ddl-auto=update
