rework github srmaca

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 #Configuracion de consultas SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Configuracion para dialecto PostgreSQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
