--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.format_sql=true
 #Configuracion para dialecto PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
